# vamp

./: Cargo.toml  README.md  vamp.toml
examples/: box.vamp  types.vamp
handbook/: 1-intro.md  2-control-flow.md  2-ctx.vamp  3-ctx-built-ins.vamp
handbook/api/: client.vamp  clientTest.vamp  routes.vamp  server.vamp
handbook/hello-vamp/: vamp.toml
handbook/hello-vamp/src/: main.vamp
src/: ast.rs  compiler.rs  eval.rs  lex.rs  lexer.rs  main.rs  parse.rs  repl.rs  source.rs  symbol.rs  tokens.rs  tuple.rs  type.rs  vm.rs  watch.rs
src/vamp/: Cargo.toml
src/vamp/src/: config.rs  main.rs
src/vamp_check/: Cargo.toml
src/vamp_check/src/: error.rs  lib.rs
src/vamp_codegen_wasm/: Cargo.toml
src/vamp_eval/: Cargo.toml  README.md
src/vamp_eval/src/: error.rs  lib.rs  value.rs
src/vamp_sym/: Cargo.toml  README.md
src/vamp_sym/src/: lib.rs
src/vamp_syntax/: Cargo.toml  README.md
src/vamp_syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs
src/vamp_syntax/src/lexer/: tests.rs
src/vamp_syntax/src/parser/: tests.rs
src/vamp_tuple/: Cargo.toml  README.md
src/vamp_tuple/src/: lib.rs
src/vamp_ty/: Cargo.toml
src/vamp_ty/src/: lib.rs
src/vamp_vm/: Cargo.toml
