[package]
name = "vamp"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo =  { version = "3.12.0", features = ["collections"] }
glob = "0.3.0"
notify = "5.0.0"
notify-debouncer-mini = "*"
rustc-hash = "1.1.0"
rustyline = "10.1.0"
bincode = "1.3.3"
serde = { version = "1.0.156", features = ["derive", "rc"] }
